--- a/index.html
+++ b/index.html
@@ -44,44 +44,31 @@
         </thead>
         <tbody>
             <!-- Allocation Data -->
-            <tr>
-                <td>1</td>
-                <td>Marion</td>
-                <td>Romain</td>
-                <td>Myriam S</td>
-                <td>Liam</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Aude</td>
-                <td>Agathe</td>
-                <td>Emma M</td>
-                <td>Maria</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Philippine</td>
-                <td>Manon</td>
-                <td>Axelle</td>
-                <td>Maud</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Emma G</td>
-                <td>Thibaut</td>
-                <td>Myriam F</td>
-                <td>Victoria</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Chlo&eacute;</td>
-                <td>Lola</td>
-                <td>Andrea</td>
-                <td>Claire</td>
-            </tr>
-            <!-- Add more rows as needed -->
+            <tr><td>1</td><td>Emma M</td><td>Thibaut</td><td>Romain</td><td>Liam</td></tr>
+            <tr><td>2</td><td>Myriam F</td><td>Andrea</td><td>Emma G</td><td>Aude</td></tr>
+            <tr><td>3</td><td>Morgan</td><td>Thibaut</td><td>Myriam S</td><td>Axelle</td></tr>
+            <tr><td>4</td><td>Manon</td><td>Agathe</td><td>Agathe</td><td>Margaux</td></tr>
+            <tr><td>5</td><td>Morgan</td><td>Marion</td><td>Maria</td><td>Chlo&eacute;</td></tr>
+            <tr><td>6</td><td>Julien</td><td>Claire</td><td>Victoria</td><td>Camille</td></tr>
+            <tr><td>7</td><td>Philippine</td><td>Lola</td><td>Emma M</td><td>Romain</td></tr>
+            <tr><td>8</td><td>Aude</td><td>Myriam F</td><td>Andrea</td><td>Liam</td></tr>
+            <tr><td>9</td><td>Axelle</td><td>Camille</td><td>Marion</td><td>Thibaut</td></tr>
+            <tr><td>10</td><td>Victoria</td><td>Manon</td><td>Morgan</td><td>Claire</td></tr>
+            <tr><td>11</td><td>Maria</td><td>Agathe</td><td>Margaux</td><td>Emma G</td></tr>
+            <tr><td>12</td><td>Chlo&eacute;</td><td>Axelle</td><td>Aude</td><td>Julien</td></tr>
+            <tr><td>13</td><td>Emma G</td><td>Claire</td><td>Philippine</td><td>Maria</td></tr>
+            <tr><td>14</td><td>Liam</td><td>Thibaut</td><td>Victoria</td><td>Manon</td></tr>
+            <tr><td>15</td><td>Romain</td><td>Emma M</td><td>Camille</td><td>Andrea</td></tr>
+            <tr><td>16</td><td>Margaux</td><td>Morgan</td><td>Julien</td><td>Chlo&eacute;</td></tr>
+            <tr><td>17</td><td>Aude</td><td>Lola</td><td>Myriam S</td><td>Victoria</td></tr>
+            <tr><td>18</td><td>Claire</td><td>Philippine</td><td>Emma G</td><td>Margaux</td></tr>
+            <tr><td>19</td><td>Marion</td><td>Axelle</td><td>Camille</td><td>Emma M</td></tr>
+            <tr><td>20</td><td>Agathe</td><td>Manon</td><td>Maria</td><td>Liam</td></tr>
+            <tr><td>21</td><td>Thibaut</td><td>Aude</td><td>Romain</td><td>Andrea</td></tr>
+            <tr><td>22</td><td>Lola</td><td>Julien</td><td>Axelle</td><td>Philippine</td></tr>
+            <tr><td>23</td><td>Myriam S</td><td>Chlo&eacute;</td><td>Morgan</td><td>Claire</td></tr>
+            <tr><td>24</td><td>Andrea</td><td>Victoria</td><td>Julien</td><td>Maria</td></tr>
         </tbody>
     </table>
 </body>
 </html>
-
